<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Geodroid Server</string>
    <string name="app_name_short">Geodroid</string>
    
    <string name="status_offline">Geodroid server is offline.</string>
    <string name="status_online">Geodroid server is online and running on port %d.</string>
    <string name="status_error">Geodroid server started with errors.</string>
    
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="title_page_list">Pages</string>
    <string name="title_page_detail">Page Detail</string>

    <string name="server_online">Server online</string>
    <string name="server_offline">Server offline</string>
    
    <string name="apps">Apps</string>
    <string name="data">Data</string>
    <string name="layers">Layers</string>
    <string name="logs">Logs</string>
    <string name="settings">Settings</string>
    <string name="status">Status</string>

    <string name="server_status">Server Status</string>
    <string name="storage">Storage</string>
    <string name="port">Geodroid Port</string>
    <string name="data_directory">Data Directory</string>
    <string name="apps_directory">Apps Directory</string>
    <string name="www_directory">Web Directory</string>
    <string name="calculating">Calculating</string>

    <string name="layer_preview">Layer Preview</string>
    <string name="loading_layers">Loading layers</string>
    <string name="all">All</string>
    <string name="point">Point</string>
    <string name="linestring">Linestring</string>
    <string name="polygon">Polygon</string>
    <string name="multipoint">MultiPoint</string>
    <string name="multilinestring">MultiLinestring</string>
    <string name="multipolygon">MultiPolygon</string>
	<string name="collection">Collection</string>
	<string name="geometry">Geometry</string>
	
	<string name="server_logs">Server Logs</string>
	<string name="loading_logs">Loading logs</string>

	<string name="applications">Applications</string>
	<string name="loading_apps">Loading Apps</string>
	
    <string name="vector">Collection</string>
    <string name="tile">Tile</string>

    <string name="refresh">Refresh</string>
    <string name="title_and_name">Title &amp; Name</string>
    <string name="type">Type</string>
    <string name="preview">Preview</string>
    <string name="preview_in_openlayers">Preview in OpenLayers</string>

    <string name="about_geodroid">About Geodroid</string>
    <string name="about_geodroid_content">Geodroid is an open source project licensed under the Apache License, Version 2.0.</string>
    <string name="about_geodroid_url">http://github.com/boundlessgeo/geodroid-server</string>
	<string name="developed_by">Developed by</string>
	<string name="this_build">This Build</string>
	<string name="build_info">Version %1$s (rev %2$s) built on %3$s</string>

	<string name="oops">Oops</string>
	<string name="error_occurred">An unexpected error has occurred. Please report the stack trace below to developers.</string>
	
    <string-array name="log_levels">
        <item>Info</item>
        <item>Warn</item>
        <item>Error</item>
        <item>Debug</item>
        <item>Verbose</item>
    </string-array>

    <string name="pref_port">Port</string>
    <string name="pref_port_key">pref_port</string>
    <string name="pref_port_summary">Port server listens on.</string>

    <string name="pref_data_dir">Data Directory</string>
    <string name="pref_data_dir_key">pref_data_dir</string>
    <string name="pref_data_dir_summary">Directory for spatial data storage.</string>

    <!-- <string name="pref_apps_dir">Apps Directory</string>
    <string name="pref_apps_dir_key">pref_apps_dir</string>
    <string name="pref_apps_dir_summary">Root directory for applications.</string>
 -->

    <string name="pref_web_dir">Web Directory</string>
    <string name="pref_web_dir_key">pref_webroot_dir</string>
    <string name="pref_web_dir_summary">Directory for static file storage.</string>

    <string name="pref_num_threads">Server Connections</string>
    <string name="pref_num_threads_key">pref_num_threads </string>
    <string name="pref_num_thread_summary">Maximum number of concurrent server connections.</string>
    

</resources>
