<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="@string/pref_port_key"
        android:title="@string/pref_port"
        android:summary="@string/pref_port_summary"
        android:numeric="integer"
        android:defaultValue="8000" />
    <EditTextPreference
        android:key="@string/pref_num_threads_key"
        android:title="@string/pref_num_threads"
        android:summary="@string/pref_num_thread_summary"
        android:numeric="integer"
        android:defaultValue="25" />
    <EditTextPreference
        android:key="@string/pref_data_dir_key"
        android:title="@string/pref_data_dir"
        android:summary="@string/pref_data_dir_summary"
        android:defaultValue="/mnt/sdcard/Geodata" />
    <!-- EditTextPreference
        android:key="@string/pref_apps_dir_key"
        android:title="@string/pref_apps_dir"
        android:summary="@string/pref_apps_dir_summary"
        android:defaultValue="/mnt/sdcard/Geodroid/apps" /-->
    <EditTextPreference
        android:key="@string/pref_web_dir_key"
        android:title="@string/pref_web_dir"
        android:summary="@string/pref_web_dir_summary"
        android:defaultValue="/mnt/sdcard/Geodroid" />
</PreferenceScreen>