<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--  
      Server Status section 
    -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
            android:id="@+id/status.status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/server_status"
            style="@style/TextMediumCaps" />

        <View
                android:id="@+id/status.status_div"
                style="@style/Divider"/>
        
        <TextView
            android:id="@+id/status.status_detail"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="@dimen/ContentMarginLeft"
            android:layout_marginTop="@dimen/SubSectionMarginTop"
            style="@style/TextSmall"/>

    </LinearLayout>

    <!-- 
      Storage section 
     -->
     <LinearLayout
        android:orientation="vertical" 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/SectionMarginTop">

        <RelativeLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        
            <TextView
                android:id="@+id/status.storage_title"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/storage"
                style="@style/TextMediumCaps"/>
            
             <LinearLayout android:id="@+id/status.storage_progress"
               android:orientation="horizontal"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_alignParentRight="true">
    
                 <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@android:style/Widget.ProgressBar.Small"/>
        
                 <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/Space"
                    android:text="@string/calculating"/>
    
            </LinearLayout>
        
        </RelativeLayout>
        
    
            <View
               android:id="@+id/status.storage_div"
               style="@style/Divider"/>
    
        <LinearLayout android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/ContentMarginLeft">

            <!--  Data Directory -->
            <TextView
                android:id="@+id/status.dataDir_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/SubSectionMarginTop"
                android:text="@string/data_directory"
                style="@style/TextMedium"/>
        
                <TextView
                    android:id="@+id/status.dataDir"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextSmall"/>

                <TextView
                    android:id="@+id/status.dataDirSize"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextSmall"/>
                
            <!--  Apps Directory -->
            <!-- TextView
                android:id="@+id/status.appsDir_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/SubSectionMarginTop"
                android:text="@string/apps_directory"
                style="@style/TextMedium"/>
        
                <TextView
                    android:id="@+id/status.appsDir"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextSmall"/>
        
                <TextView
                    android:id="@+id/status.appsDirSize"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextSmall"/-->

            <!--  WWW Directory -->
            <TextView
                android:id="@+id/status.wwwDir_label"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/SubSectionMarginTop"
                android:text="@string/www_directory"
                style="@style/TextMedium"/>

        
                <TextView
                    android:id="@+id/status.wwwDir"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextSmall"/>

                            
                <TextView
                    android:id="@+id/status.wwwDirSize"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    style="@style/TextSmall"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>